add role manager and tag and video controller

--- a/Server/MindHorizon.IocConfig/MindHorizon.IocConfig.csproj
+++ b/Server/MindHorizon.IocConfig/MindHorizon.IocConfig.csproj
@@ -5,11 +5,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="6.0.0" />
-  </ItemGroup>
-
-  <ItemGroup>
     <ProjectReference Include="..\MindHorizon.Data\MindHorizon.Data.csproj" />
+    <ProjectReference Include="..\MindHorizon.Services\MindHorizon.Services.csproj" />
   </ItemGroup>
 
 </Project>
