--- a/Server/MindHorizon/appsettings.json
+++ b/Server/MindHorizon/appsettings.json
@@ -1,4 +1,4 @@
-{
+﻿{
   "ConnectionStrings": {
     "MSSqlServer": "Data Source=.;Initial Catalog=MindHorizonDB;Integrated Security=true"
   },
@@ -8,5 +8,15 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "SiteSettings": {
+    "AdminUserSeed": {
+      "Username": "Admin",
+      "Password": "Admin@123",
+      "Email": "s.mojtaba1987@gmail.com",
+      "RoleName": "مدیر سایت",
+      "FirstName": "مجتبی",
+      "LastName": "حسینی"
+    }
+  }
 }
