--- a/Server/MindHorizon.Services/MindHorizon.Services.csproj
+++ b/Server/MindHorizon.Services/MindHorizon.Services.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netcoreapp2.2</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\MindHorizon.Data\MindHorizon.Data.csproj" />
+  </ItemGroup>
+
 </Project>
