add user manager and login and some other stuf

--- a/Server/MindHorizon.ViewModels/MindHorizon.ViewModels.csproj
+++ b/Server/MindHorizon.ViewModels/MindHorizon.ViewModels.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\MindHorizon.Common\MindHorizon.Common.csproj" />
+    <ProjectReference Include="..\MindHorizon.Entities\MindHorizon.Entities.csproj" />
   </ItemGroup>
 
 </Project>
