--- a/Server/MindHorizon/appsettings.json
+++ b/Server/MindHorizon/appsettings.json
@@ -3,6 +3,11 @@
     "MSSqlServer": "Data Source=.;Initial Catalog=MindHorizonDB;Integrated Security=true"
   },
 
+  "GoogleReCaptcha": {
+    "ClientKey": "6LeJFacUAAAAAIPyA2vTj7ZVpVwngiYbMVwJsyk9",
+    "SecretKey": "6LeJFacUAAAAAH7D3uZtyK0n3365XKYJEXpbru7K"
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
