--- a/Server/MindHorizon/MindHorizon.csproj
+++ b/Server/MindHorizon/MindHorizon.csproj
@@ -24,6 +24,7 @@
   <ItemGroup>
     <Folder Include="Areas\Admin\Data\" />
     <Folder Include="Areas\Admin\Models\" />
+    <Folder Include="wwwroot\avatars\" />
     <Folder Include="wwwroot\posters\" />
   </ItemGroup>
 
