add index for post

--- a/Server/MindHorizon/MindHorizon.csproj
+++ b/Server/MindHorizon/MindHorizon.csproj
@@ -8,6 +8,10 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
+    <PackageReference Include="Microsoft.CodeAnalysis.FxCopAnalyzers" Version="2.9.8">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.2.4" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="2.2.4">
       <PrivateAssets>all</PrivateAssets>
@@ -28,6 +32,27 @@
     <Folder Include="wwwroot\avatars\" />
     <Folder Include="wwwroot\postImage\" />
     <Folder Include="wwwroot\posters\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="wwwroot\assets\fonts\Farsi-Digits-Without-Latin\Vazir-Black-FD-WOL.woff2" />
+    <None Include="wwwroot\assets\fonts\Farsi-Digits-Without-Latin\Vazir-Bold-FD-WOL.woff2" />
+    <None Include="wwwroot\assets\fonts\Farsi-Digits-Without-Latin\Vazir-FD-WOL.woff2" />
+    <None Include="wwwroot\assets\fonts\Farsi-Digits-Without-Latin\Vazir-Light-FD-WOL.woff2" />
+    <None Include="wwwroot\assets\fonts\Farsi-Digits-Without-Latin\Vazir-Medium-FD-WOL.woff2" />
+    <None Include="wwwroot\assets\fonts\Farsi-Digits-Without-Latin\Vazir-Thin-FD-WOL.woff2" />
+    <None Include="wwwroot\assets\fonts\Farsi-Digits\Vazir-Black-FD.woff2" />
+    <None Include="wwwroot\assets\fonts\Farsi-Digits\Vazir-Bold-FD.woff2" />
+    <None Include="wwwroot\assets\fonts\Farsi-Digits\Vazir-FD.woff2" />
+    <None Include="wwwroot\assets\fonts\Farsi-Digits\Vazir-Light-FD.woff2" />
+    <None Include="wwwroot\assets\fonts\Farsi-Digits\Vazir-Medium-FD.woff2" />
+    <None Include="wwwroot\assets\fonts\Farsi-Digits\Vazir-Thin-FD.woff2" />
+    <None Include="wwwroot\assets\fonts\Without-Latin\Vazir-Black-WOL.woff2" />
+    <None Include="wwwroot\assets\fonts\Without-Latin\Vazir-Bold-WOL.woff2" />
+    <None Include="wwwroot\assets\fonts\Without-Latin\Vazir-Light-WOL.woff2" />
+    <None Include="wwwroot\assets\fonts\Without-Latin\Vazir-Medium-WOL.woff2" />
+    <None Include="wwwroot\assets\fonts\Without-Latin\Vazir-Thin-WOL.woff2" />
+    <None Include="wwwroot\assets\fonts\Without-Latin\Vazir-WOL.woff2" />
   </ItemGroup>
 
 </Project>
