--- a/Server/MindHorizon/appsettings.json
+++ b/Server/MindHorizon/appsettings.json
@@ -22,6 +22,20 @@
       "RoleName": "مدیر سایت",
       "FirstName": "مجتبی",
       "LastName": "حسینی"
+    },
+    "EmailSetting": {
+      "Username": "m.mindhorizon",
+      "Password": "moji@1987",
+      "Email": "m.mindhorizon@gmail.com",
+      "Host": "smtp.gmail.com",
+      "Port": 587
+    },
+    "SiteInfo": {
+      "Title": "وب سایت افق فکری",
+      "Description": "بنویسیم تا سر حد پرواز فکر ",
+      "Logo": "Logo.png",
+      "Favicon": "favicon.png",
+      "MetaDescriptionTag": "وب سایت افق فکر |جایی برای بحث درباره سینما و جامعه و علم | جدیدترین اخبار"
     }
   }
 }
