--- a/Server/MindHorizon/MindHorizon.csproj
+++ b/Server/MindHorizon/MindHorizon.csproj
@@ -1,21 +1,10 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.2</TargetFramework>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
     <AspNetCoreHostingModel>InProcess</AspNetCoreHostingModel>
   </PropertyGroup>
-
-  <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.App" />
-    <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.2.4" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="2.2.4">
-      <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-    </PackageReference>
-    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.2.4" />
-  </ItemGroup>
-
+  
   <ItemGroup>
     <ProjectReference Include="..\MindHorizon.Common\MindHorizon.Common.csproj" />
     <ProjectReference Include="..\MindHorizon.Data\MindHorizon.Data.csproj" />
@@ -50,6 +39,13 @@
     <None Include="wwwroot\assets\fonts\Without-Latin\Vazir-Medium-WOL.woff2" />
     <None Include="wwwroot\assets\fonts\Without-Latin\Vazir-Thin-WOL.woff2" />
     <None Include="wwwroot\assets\fonts\Without-Latin\Vazir-WOL.woff2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.2">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
   </ItemGroup>
 
 </Project>
